# vibrojet

./: .gitignore  Gmat_xy2_valence.txt  README.md  jet_example.ipynb  pseudo_example.ipynb  pyproject.toml  test_xy2_valence.py  xy2_valence.ipynb  xy2_valence.py  xy2_valence_jacfwd.py  xy4_sym_alpha.ipynb  xy4_sym_alpha_jacfwd.ipynb
etc/data/methane/: README.md  (+1 more)
examples/: README.md  _h2co_gmat_coefs_4.npy  _h2co_gmat_coefs_n_6.npy  _h2co_nmode_enr.npz  _h2co_poten_coefs_6.npy  _h2co_poten_coefs_n_6.npy  _h2co_pow_enr.npz  _h2co_pseudo_coefs_4.npy  _h2co_pseudo_coefs_n_6.npy  _h2s_gmat_coefs_12.npy  _h2s_gmat_coefs_8.npy  _h2s_poten_coefs_12.npy  _h2s_poten_coefs_8.npy  _h2s_pseudo_coefs_8.npy  _nh3_gmat_beta_coefs_4.npz  _nh3_gmat_beta_coefs_8.npz  _nh3_gmat_beta_y_coefs_8.npz  _nh3_nmode_enr.npz  _nh3_poten_beta_coefs_4.npz  _nh3_poten_beta_coefs_8.npz  _nh3_poten_coefs_6.npy  _nh3_pow_enr.npz  _nh3_pseudo_beta_coefs_4.npz  _nh3_pseudo_beta_coefs_6.npz  _nh3_pseudo_beta_coefs_8.npz  _nh3_pseudo_beta_y_coefs_2.npz  _nh3_pseudo_beta_y_coefs_8.npz  h2co_pes_expansion.ipynb  h2co_solve.ipynb  h2co_solve_verAY.ipynb  h2co_test_pes_reexpansion.ipynb  h2s_solve.ipynb  jet_example.ipynb  nh3_example.ipynb  nh3_example.py  nh3_gmat_beta_coefs_2.npz  nh3_gmat_beta_coefs_6.npz  nh3_gmat_beta_y_coefs_2.npz  nh3_gmat_beta_y_coefs_4.npz  nh3_gmat_beta_y_coefs_6.npz  (+26 more)
vibrojet/: .gitignore  _keo.py  basis_utils.py  basis_utils2.py  eckart.py  griewank.py  jet_example.ipynb  jet_prim.py  keo.py  taylor.py
vibrojet/potentials/: h2co_AYTY.py  h2s_AYT2.py  h2s_AYT2_pre.py  nh3_POK.py
